@@ -6,14 +6,14 @@ confdb.setupCount=7
 
 confdb0.dbSetup=HLT Development
 confdb0.dbType=oracle
-confdb0.dbHost=cmsr1-s.cern.ch
+confdb0.dbHost=cmsr1-s.cern.ch, cmsr2-s.cern.ch, cmsr3-s.cern.ch
 confdb0.dbPort=10121
 confdb0.dbName=cms_cond.cern.ch
 confdb0.dbUser=cms_hltdev_writer
 
 confdb1.dbSetup=ORCOFF
 confdb1.dbType=oracle
-confdb1.dbHost=cmsr1-v.cern.ch
+confdb1.dbHost=cmsr1-s.cern.ch, cmsr2-s.cern.ch, cmsr3-s.cern.ch
 confdb1.dbPort=10121
 confdb1.dbName=cms_cond.cern.ch
 confdb1.dbUser=cms_hlt_gui_r
@@ -34,14 +34,14 @@ confdb3.dbUser=cms_hlt_w
 
 confdb4.dbSetup=TEST2R
 confdb4.dbType=oracle
-confdb4.dbHost=int2r1-s.cern.ch
+confdb4.dbHost=int2r1-s.cern.ch, int2r2-s.cern.ch
 confdb4.dbPort=10121
 confdb4.dbName=int2r_nolb.cern.ch
 confdb4.dbUser=cms_hlt_writer
 
 confdb5.dbSetup=TEST9R
 confdb5.dbType=oracle
-confdb5.dbHost=int9r1-v.cern.ch
+confdb5.dbHost=int9r1-v.cern.ch, int9r2-v.cern.ch
 confdb5.dbPort=10121
 confdb5.dbName=int9r_nolb.cern.ch
 confdb5.dbUser=cms_hlt_writer
